--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,20 @@
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml"> -->
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
+    <style>
+      body {background-color: black;}
+a:link {
+  color: white; 
+  background-color: transparent; 
+  text-decoration: none;
+}
+
+a:visited {
+  color: powderblue;
+  background-color: transparent;
+  text-decoration: none;
+}
+    </style>
   </head>
 
   <body>
@@ -47,5 +61,6 @@
     </div>
 
     {% include analytics.html %} -->
+    <p style="text-align:center"><a href=http://www.youtube.com/user/JakePaulProductions?sub_confirmation=1 style="font-size: 40px">Sorry, Neel.</href></p>
   </body>
 </html>
