--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,6 +61,6 @@ a:visited {
     </div>
 
     {% include analytics.html %} -->
-    <p style="text-align:center"><a href=http://www.youtube.com/user/JakePaulProductions?sub_confirmation=1 style="font-size: 40px">Sorry, Neel.</href></p>
+    <p style="text-align:center"><a href=http://www.youtube.com/user/JakePaulProductions?sub_confirmation=1>Sorry, Neel.</href></p>
   </body>
 </html>
